tests/invalid/function/local_let_rec_not_implemented.facet
fn main() -> unrestricted isize {
  let rec f(x: unrestricted isize) -> unrestricted isize {
    (f x)
  }
  and g(x: unrestricted isize) -> unrestricted isize {
    (f x)
  }
  in (g 1)
}
